# BeatBox-Booking-Backend

./: .dockerignore  .gitignore  .pylintrc  .test.env  Dockerfile  README.md  alembic.ini  dev-launch.sh  docker-compose.yml  prod-launch.sh  pyproject.toml  pytest.ini  setup.cfg  startup.py  test.env
.github/workflows/: main.yml  test.yml
app/: alembic.ini  db.py  main.py  settings.py
app/data/: demo.py  initial.py
app/domain/: db.py
app/exceptions/: booking.py  employee.py  file.py  review.py  room.py  studio.py  user.py
app/infrastructure/: service.py
app/migrations/: env.py
app/models/: base.py  booking.py  employee.py  review.py  room.py  studio.py  user.py
app/schemas/: auth.py  booking.py  employee.py  review.py  room.py  studio.py  user.py
app/services/: auth.py  base.py  booking.py  employee.py  file.py  review.py  room.py  studio.py  user.py
app/settings/: app.py  auth.py  base.py  db.py  s3.py
migrations/: env.py
migrations/versions/: 0340b9de3fe1_rename_date_column_on_review.py  06b05e039210_add_name_to_employee.py  0cd1a5d99ebe_initial_tables.py  0cd7bed45c0b_add_is_superuser.py  451bbe9a9e0b_add_not_nullable_to_room_name.py  47e7795e7d47_delete_phone_number_from_user.py  5bad04b7d55d_initial_tables.py  72dd7cfbd5fe_url_to_string.py  786c699a13c1_alter_datetime_opening_at_closing_at_to_.py  8355b9272eae_remove_additional_services.py  8ac79b8da155_create_room_model_and_add_foriegn_keys.py  8b222c86f64c_add_domain_models.py  8ca21d66d057_remove_email_index.py  a38d4efd6c93_rename_file_columns.py  aceb72ce7e3e_replace_phone_number_in_studio_by_str.py  b198f50bc949_studio_update.py  b63c8217491c_add_max_length_to_strings.py  b67f56eae721_delete_file.py  b71c309fc91a_add_email_field_to_users.py  cab83551c6f5_phone_number_to_string.py  e311a95aa2ab_add_cascade_delete.py  e91f59af6a80_slot_and_person_data_move_to_booking.py  eef276f52d7c_create_base_models.py  f3c425d5ef14_add_equipment_to_room.py  f5767b10d2ce_add_user_nickname.py
nginx/: Dockerfile  nginx.conf
src/: config.py  db.py  emailsender.py  main.py  messagesender.py  security.py  settings.py
src/api/: __init__.py  auth.py  booking.py  employee.py  file.py  review.py  room.py  studio.py  user.py
src/data/: demo.py  initial.py
src/database/: actions.py
src/domain/: db.py
src/infrastructure/: exceptions.py  repository.py  service.py
src/models/: __init__.py  review.py  room.py  slot.py  studio.py  user.py
src/routes/: auth.py  user.py
src/schemas/: user.py
static/: some.txt
tests/: conftest.py  test_a.py
(+202 files in other folders)
