[tool.poetry]
name = "BeatBox Booking"
version = "0.1.0"
description = "Reservation Service for Tochka"
authors = ["dolbikcop <polyabikka@gmail.com>", "codEnjoyer <ch4shkin.nikita@gmail.com>", "2piCode <i.tupikov12@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic = { extras = ["dotenv"], version = "^2.6.4" }
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
python = "3.12.2"
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pylint = "^3.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = true
exclude = '''
(
  venv
  | tests
  | pytest_cache
)
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
