[tool.poetry]
name = "BeatBox Booking"
version = "0.1.0"
description = "Reservation Service for Tochka"
authors = ["dolbikcop <polyabikka@gmail.com>", "codEnjoyer <ch4shkin.nikita@gmail.com>", "2piCode <i.tupikov12@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email", "dotenv", "phone_numbers"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
fastapi-jsonrpc = "^3.1.1"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "0.21.2"
asgi-lifespan = "^2.1.0"
fastapi-login = "^1.10.0"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
sqlalchemy-utils = "^0.41.2"
furl = "^2.1.3"
phonenumbers = "^8.13.36"
boto3 = "^1.34.103"
filetype = "^1.2.0"
pydantic-extra-types = "^2.7.0"

[tool.poetry.group.dev.dependencies]
python = "3.12.2"
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pylint = "^3.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
asyncio_mode="auto"


[tool.black]
line-length = 80
target-version = ['py312']
skip-string-normalization = true
exclude = '''
(
  venv
  | tests
  | pytest_cache
)
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
